# RainDropOS

./: .gitignore  CMakeLists.txt  LICENSE  Linker.ld  Makefile  README.md  library.json  linker.ld
asm/: Bootstrap.asm  bootstrap.asm
cmake/: Toolchain.cmake
docs/: ReadMe.md
include/: Console.h  IpcMessages.h  Kernal.h  Kernel.h  Memory.h  RainDropOS.h  Userland.h
iso/: profiledef.sh
iso/airootfs/etc/skel/: .bash_profile  .xinitrc
iso/airootfs/etc/systemd/system/: raindrop-daemon.service  raindrop-shell.service
iso/airootfs/etc/systemd/system/getty@tty1.service.d/: autologin.conf
iso/airootfs/root/: customize_airootfs.sh
scripts/: Build.bat  BuildISO.sh  build.bat  build.sh
src/: Main.cpp
src/Console/: Console.cpp
src/Kernal/: Kernal.cpp
src/Kernel/: Kernel.cpp  Memory.cpp
src/Userland/: Userland.cpp
src/daemons/: Daemon.cpp  Daemon.h  IpcServer.cpp  IpcServer.h  ProfileManager.cpp  ProfileManager.h  TelemetryCollector.cpp  TelemetryCollector.h  main.cpp
src/shell/: Application.cpp  Application.h  CMakeLists.txt  GameDetailScreen.cpp  GameDetailScreen.h  GameEntry.h  InputManager.cpp  InputManager.h  IpcClient.cpp  IpcClient.h  LibraryScreen.cpp  LibraryScreen.h  Renderer.cpp  Renderer.h  Screen.h  ScreenStack.cpp  ScreenStack.h  Settings.h  SettingsScreen.cpp  SettingsScreen.h  SteamScanner.cpp  SteamScanner.h  VdfParser.cpp  VdfParser.h  main.cpp
test/: TestMain.cpp
tests/: ipc_comms_test.cpp  ipc_test.cpp  profile_test.cpp  steam_test.cpp  telemetry_test.cpp  test.vdf  vdf_test.cpp
tests/fake_steam/config/: libraryfolders.vdf
tests/fake_steam/steamapps/: appmanifest_440.acf  appmanifest_570.acf
